# Mochi-chatkit

./: .gitignore
chatkit/: README.md
chatkit/backend/: pyproject.toml
chatkit/backend/app/: knowledge_base.py  server.py
chatkit/backend/app/data/: pdf_manifest.json
chatkit/backend/scripts/: download_pdfs.py  ingest_knowledge.py  ingest_pdfs.py  perinatal_urls.txt
